--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 		<p>
 			No NO NO
 		</p>
-		<a href="https://www.grammar.net.nz/">
+		<a href="https://en.wikipedia.org/wiki/SpongeBob_SquarePants">
 		<img src="https://media0.giphy.com/media/90FH7I3McAQ7u/source.gif" alt="Spongebob rage quit">
 		</a>
 	</body>
