--- a/Index.html
+++ b/Index.html
@@ -1,20 +1,314 @@
 <!DocType html>
 
 <html>
-	<head><
+	
+	<button type="button" class="block">No NO NO NO NO NO NO NO NO NO NO NO NO NO 
+		<a href="file://ags-data2.ags.school.nz/students/19521/Form-3-websites/lesson-1.html">
+		</a>
+	</button>
+	<button type="button" class="block">How to get betterer at minecraft
+		<a href= #middle>
+		</a>
+	</button>
+	
+	<head>
 		<title>
 			No
 		</title>
-	<head>
+	</head>
+	
 	<body bgcolor="red">
-
-		<p>
-			No NO NO
-		</p>
-		<a href="https://en.wikipedia.org/wiki/SpongeBob_SquarePants">
-		<img src="https://media0.giphy.com/media/90FH7I3McAQ7u/source.gif" alt="Spongebob rage quit">
+		<nav style=background-color:yellow;> 
+			<h1 style="font-size:5vm;"><center>
+				NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO 
+			</h1></center>
+		</nav>
+	<main>
+		<h1><center>
+			Spongebob when he is no peaceful (enraged)
+		</h1></center>
+		<a href="https://en.wikipedia.org/wiki/No"><center>
+			<img src="https://media0.giphy.com/media/90FH7I3McAQ7u/source.gif" alt="Spongebob rage quit"></center>
 		</a>
+		<Marquee>
+			<h2>
+				The image is a link so click and be enlightened
+			</h2>
+		</Marquee>
+		<p style="font-family:Century_Gothic;font-size:2vm;">
+			NO No NO			
+			This website is a really cool as it is the website that tells you about the the mist commonly used word NOOOOOOO
+			Nee
+			Jo
+			Aye
+			laa
+			Votch
+			non, 
+			nun– Yox
+			Ez
+			Na
+			Ne
+			Nann
+			Ne
+			m hai
+			No
+			Na
+			Non
+			Ne
+			Ne
+			Aí
+			Nej
+			Nee
+			No
+			Ne
+			Ei
+			No
+			Nah
+			Ei
+			Non
+			Nee
+			Nom – Non
+			ara
+			Nein
+			O’hi
+			naa
+			`A`ole
+			lo
+			nahi
+			M¯-sï
+			Nem
+			Nei
+			No
+			Tidak
+			No
+			ní hea, nil
+			No
+			Iie
+			A-nim-ni-da , A-ni-yo
+			Non, Minime
+			Ne –
+			Ne				
+			tidak
+			bú shì
+			Jaab
+			Nei				
+			Nie
+			Não
+			Não
+			Manan				
+			et
+			Ne
+			Tjhee
+			nie
+			Ne			
+			Hapana
+			Nej
+			Hindi
+			mai-chai/mai-oua				
+			hayžr
+			ni
+			Không
+			Nage
+			[No]
+			Hayi
+			neyn
+			cha
+		</p>
+	</main>
+		<center><img src="https://discussions.apple.com/content/attachment/79097ebc-7d9d-4207-a974-14e347ac52f5"></center>
+		<center><img src="https://assets.change.org/photos/4/yv/mh/imyvMHUAUzaoILJ-800x450-noPad.jpg?1542251869"></center>
+	
+		<nav style=background-color:yellow;> 
+			<h1 style="font-size:5vm;"><center>
+				Minecraft
+			</h1></center>
+		</nav>
+	<main>
+		<h1><center>
+			How to get betterer at Minecraft
+		</h1></center>
+		<a href="https://en.wikipedia.org/wiki/Minecraft"><center>
+			<img src="https://lh3.googleusercontent.com/yAtZnNL-9Eb5VYSsCaOC7KAsOVIJcY8mpKa0MoF-0HCL6b0OrFcBizURHywpuip-D6Y" alt="Spongebob rage quit"></center>
+		</a>
+		<Marquee>
+			<h2>
+				The image is a better link so click and be enlightened even more
+			</h2>
+		</Marquee>
+		<p style="font-family:Century_Gothic;font-size:2vm;">
+			Wait to spawn. Look around at your world, and try to determine what kind of biome you are in. They can be forests, deserts, oceans, taigas, jungles, etc. If there are trees, iron, water, clay and coal, you're off to a great start!
+			Image titled Be an Expert Minecraft Player Step 2
+			2
+			Start punching the first tree you see. This may sound strange, but it is one of the only things you can do at the moment. You will need wood for the rest of the game to make pickaxes to mine later on. You can make loads of items with them! Try to collect about 10-25 wood blocks.
+			Image titled Be an Expert Minecraft Player Step 3
+			3
+			Open up your inventory with 'E' (some people set it as 'I', but E is strongly recommended). If you play on Pocket Edition, press .... You should now proceed to drag the logs into the 'Crafting' section of your inventory. On the output side, you should have wood planks. Collect at least four.
+			Image titled Be an Expert Minecraft Player Step 4
+			4
+			Put one wooden plank in each box in the Crafting section of your inventory. This will make a crafting table. You can use it to make many things in the Minecraft game, including chests, beds, furnaces, weapons, and more important stuff like that!
+			Image titled Be an Expert Minecraft Player Step 5
+			5
+			Make sticks. Put one wooden plank on the bottom, and one on the top. You should see four sticks in the output. Collect them to make torches and handles of weapons.
+			Image titled Be an Expert Minecraft Player Step 6
+			6
+			Make a wooden pickaxe (not a wooden axe). If there is a green book icon on the inventory, click it to reveal crafting recipes for items, you'll want to look for the Wooden Pickaxe. Another way to find crafting recipes is to look in the sources for the Minecraft Wiki, look up the recipe for the wooden pickaxe.
+			Image titled Be an Expert Minecraft Player Step 7
+			7
+			Look for a mountain or hill. Take your shovel and dig through the dirt, then take your pickaxe to carve a small room out of the stone.
+			Image titled Be an Expert Minecraft Player Step 8
+			8
+			Use the stone you mined to make a furnace, and stone tools, which are much more efficient and more durable. Again, use the wiki or the crafting guide to learn how to make them.
+			Image titled Be an Expert Minecraft Player Step 9
+			9
+			Burn a piece of wood into the furnace to create charcoal. Make some torches using the charcoal to light up your shelter.
+			Image titled Be an Expert Minecraft Player Step 12
+			10
+			Go inside your cave house and place the 4 torches down on either the walls or the floor. If you need more light, repeat step 9 until you have reached your desired amount.
+			Image titled Be an Expert Minecraft Player Step 13
+			11
+			Protect yourself at night. By now it should be nighttime. It is essential that you make a door. Make your doorway 1x2 so the door fits perfectly. You will probably start off with wooden doors. When you get slightly advanced later in the game, replace with iron doors for better security.
+			Image titled Be an Expert Minecraft Player Step 14
+			12
+			Wait out the night inside away from the door. In this time you should make a chest (look on the wiki, last time it will be said).
+			Image titled Be an Expert Minecraft Player Step 15
+			13
+			Get your sword in the morning. This is probably the most dangerous time that you have experienced in Minecraft so far, so be prepared. Don't bring anything except your sword and be alert for monsters.
+			Image titled Be an Expert Minecraft Player Step 16
+			14
+			Kill. Now is your time to be relaxed and have fun. Kill everything that moves except yourself, and get great rewards by doing so.
+			Make sure you have your sword ready if you do so choose to go out in the night.
+			Image titled Be an Expert Minecraft Player Step 17
+			15
+			Find wool and food. You may have to kill animals, but if you're too nice to slaughter them, find some apples by punching more trees, or harvest some wheat with a hoe. Wheat seeds are obtainable through grass, which should be abundant in your Minecraft world. Mine with your pickaxe to find some iron and coal. With iron, you can craft shears to shear sheep so you don't need to kill them. You need 3 wool blocks to make a bed. The easy way out is to kill sheep, but if you keep them alive you can continue shearing them and eventually breed them. You also can make a farm when you have enough seeds and other equipment as well as a place to build the farm.
+			Image titled Be an Expert Minecraft Player Step 18
+			16
+			Make a bed at home with the wool you harvested. Put it somewhere in your house that looks good; it is recommended you expand your house! With a bed, you can save your spawn point, so if you die, you will respawn in your house. Continue to kill until the sun sets.
+			Image titled Be an Expert Minecraft Player Step 19
+			17
+			Prepare for another night. When the sun sets, grab your pick, shovel, and bolt again, for the monsters are coming out. Go into your mine and continue mining, since iron ore will be very valuable to you. Look for iron, coal and rare ores for about 7 minutes, because that is when the sun will start to rise. Always be alert for monsters, especially creepers, which will explode if they come too close.
+			Image titled Be an Expert Minecraft Player Step 20
+			18
+			Keep looking for iron. Once you get some, go to your furnace. Put some coal on the bottom (wood will also work, but not very well), and put your iron ore on the top. Your outcome will be iron ingots! With iron ingots, you can make tools! Remember, your tool priority goes pickaxe, axe, sword, shovel, then hoe (hoe is not needed at all for a while).
+			Image titled Be an Expert Minecraft Player Step 21
+			19
+			Kill more! At sunrise, kill all mobs again, since you will need all of the items that they drop when killed. See all of the crafting recipes you can make with these drops at the Minecraft Wiki.
+			Image titled Be an Expert Minecraft Player Step 22
+			20
+			Congratulations, you have finished the "Newbie" section of the guide!
+			Part
+			2
+			Going Beyond the 101
+			Image titled Be an Expert Minecraft Player Step 23
+			1
+			Explore. Make a basic checklist of things you might want to find. Some suggestions are: Sand, clay, ink sacs, Cacti, birch trees, spruce trees, oak trees, and mountain biomes. Mountain biomes are VERY useful for mining and finding/making unique structures.
+			Image titled Be an Expert Minecraft Player Step 24
+			2
+			Put useful items to work that you found while exploring! Smelt sand in the furnace to create glass, put cacti on sand around your house to make a monster barrier, put cacti in the furnace to make green dye, use ink sacs as black dye, decorate with different kinds of wood! Really, there are infinite possibilities!
+			Image titled Be an Expert Minecraft Player Step 25
+			3
+			Add on to your home. You have iron tools, but still live in a cave. Now that you are more experienced, consider building an outside portion to your cave or even move and build an entirely new house! You can make windows if you have glass.
+			Image titled Be an Expert Minecraft Player Step 26
+			4
+			Explore a cave, if you find one. Grab a stone or iron sword and of course, a pickaxe, and set off down into the cave. Be sure to bring LOTS of torches! You will find lots of coal and iron as well as gold and redstone if you go deeper down. If you're lucky you might even find diamonds, but be careful as there is often lava flowing underground. Don't bring items that are unnecessary, as your inventory will be filled to the brim after your mining trip!
+			Image titled Be an Expert Minecraft Player Step 27
+			5
+			Make armor and tools. If you explored the cave, you are sure to have found plenty of iron! Smelt it, and use the wiki to figure out how to make it into armor. Of course, before you use good iron on armor, be sure to make backups for your tools.
+			Image titled Be an Expert Minecraft Player Step 28
+			6
+			Go mining. If you dig down to layer 11 by using F3 (please remember not to dig straight down), you will have the highest chance of finding diamond. You can make a strip mine there for a high chance to find diamond. A strip mine is usually one wide and two tall, and is the most effective way of getting diamonds. It is suggested you use an iron pickaxe to mine it. You can also enchant it with a enchanted book and anvil to get Fortune (I, II, III) to double, triple or quadruple the amount of diamonds you get.
+			Image titled Be an Expert Minecraft Player Step 29
+			7
+			Use your diamonds. Diamonds have many of the same uses as iron, but they don't need to be smelted, are far more powerful, much more durable, and have extra purposes. Diamonds are usually favored by Minecraft players as a great achievement.
+			Image titled Be an Expert Minecraft Player Step 30
+			8
+			Make obsidian. Find a lava pool towards the bottom of the world, but be sure not to fall in! Lava deals deadly damage. If you have made a bucket with iron, you can scoop up some water from the surface and bring it to the lava pool. Right-click on a wall in the room (not the lava itself), and watch the magic happen. All of the lava will transform into obsidian! Only a diamond pickaxe can mine obsidian.
+			Image titled Be an Expert Minecraft Player Step 31
+			9
+			Use your obsidian. This is a very useful resource due to it being the strongest naturally placeable block in the game. It is also used to make a Nether portal, which leads to the Nether, the 'hell' of Minecraft.
+			Image titled Be an Expert Minecraft Player Step 32
+			10
+			Explore the Nether. In the Nether, it is a completely different world. Almost all of the blocks are different. You will find lots of valuable resources such as glowstone and nether wart, fight dangerous mobs and maybe even find a Nether Fortress (a generated structure). There is so much in the Nether that is unique, you will just have to see for yourself! Have fun playing!
+
+		</p>
+	</main>
+		<center><img src="https://media1.tenor.com/images/3ffe81203d6ab2d3120f5db0119392d6/tenor.gif?itemid=13329851"></center>
+		<center><img src="https://i.imgur.com/gK3Plwe.png"></center>
+		<nav style=background-color:yellow;> 
+			<h1 style="font-size:5vm;"><center>
+				Fortnite
+			</h1></center>
+		</nav>
+	<main>
+		<h1><center>
+			How to get bettererererererer at Fortnite
+		</h1></center>
+		<a href="https://en.wikipedia.org/wiki/Fortnite"><center>
+			<img src="https://cnet1.cbsistatic.com/img/lZuw_N_KeBZqTkawkbW8SDhABhY=/1092x0/2019/08/01/b0a6a5c1-2da2-4367-93aa-604dc59dbd32/fortnitex.jpg" alt="Spongebob rage quit"></center>
+		</a>
+		<Marquee>
+			<h2>
+				The image is a better link so click and be enlightened even more than before
+			</h2>
+		</Marquee>
+		<p style="font-family:Century_Gothic;font-size:2vm;">
+			For the better part of 2018, I’ve immersed myself in “Fortnite Battle Royale,” the most popular game in the world right now. When I’m not playing, I’ve been watching and studying the best “Fortnite” streamers on Twitch, like Ninja.
+
+			Still, after dozens of hours of playing and watching “Fortnite,” I felt like I wasn’t actually improving in the game. I was dying early and often. And while I may have been getting the hang of the various controls, building and shooting – the two most essential functions in “Fortnite” for defence and offence, respectively – were still not intuitive to me. I was getting easily overwhelmed in firefights. And this was frustrating to me, since I play a lot of video games.
+
+			Recently, though, I made a breakthrough. I’m nowhere near the level of pro streamers like Ninja, but I’m consistently finishing in the top 10 to 25 players, and usually with at least one or two kills under my belt.
+
+			Here’s what I’d suggest to anyone who’s struggling to get better at “Fortnite”:
+
+			1. Try playing on a different device.
+
+			Epic Games
+			Personally, my biggest breakthrough with “Fortnite” was simply playing the game on a different device.
+
+			I had spent probably a few dozen hours playing “Fortnite” on my PlayStation 4, unsuccessfully, until I finally tried downloading the game to my iPhone X. I noticed an instant and immediate improvement.
+
+			For some reference: Prior to playing “Fortnite” on my iPhone, I was never able to successfully hit anyone with a sniper rifle while playing on my PS4. But I got two sniper kills – not just hits, but kills – in one of my first matches when I switched to my iPhone. In general, I’ve found it’s much easier to move, build, aim, and shoot on the iPhone compared to the PlayStation 4. And I bet it’s even easier if you play the game on PC.
+
+			If you’re interested, here are the controls for “Fortnite” if you’re playing on an iPhone. As you can see, it’s very simple.
+
+			Dave Smith/Business Insider
+			The game is coming soon to Android, says Epic Games, the creator of “Fortnite.” But it’s unclear when, and which devices will be supported.
+
+			2. Lower the sensitivity settings for your controls.
+
+			Photo by Ethan Miller/Getty Images
+			I overheard Tyler “Ninja” Blevins mention this tip on his Twitch stream, so I tried it for myself. And sure enough, lowering the sensitivity settings of your controls – whether you’re using a console controller or a keyboard and mouse – can sometimes help you steady your aim.
+
+			To visit your settings, click the gear icon in the top right corner of the screen while you’re playing the game or waiting in the lobby. There, you’ll see your controller sensitivities. While you’re there, though, be sure to revisit your other controls and settings. You may want to tweak some of those, apply the changes, and see how the game plays. You never know: Sometimes, a simple tweak is all you need.
+
+			3. Once the game starts, wait until the final seconds to jump out of the flying bus.
+
+			Dave Smith/Business Insider
+			Every “Fortnite Battle Royale” game starts with the 100 online players jumping out of the flying bus and onto the island below. But if you notice, most people tend to jump out as early as possible – probably because so many players just want to get in there and start killing each other.
+
+			Don’t be one of those people.
+
+			If you’re patient, and you wait until the final seconds to jump from the bus, you’ll usually land with fewer enemy players nearby. That gives you more time to find weapons and protection. And if you’re completely alone, you can use this valuable time to practice shooting and building. Since “Fortnite” doesn’t have its own practice mode, aside from the seconds-long loading area before the start of every game, this can be the best way to practice switching between weapons, trying out new guns, and building ramps and fortresses.
+
+			Building and shooting are essential to playing and winning in “Fortnite” so fly to the end of the map, quietly gather materials and gear, and use that isolation to your advantage and practice.
+
+			4. Pay attention to sounds.
+
+			‘Fortnite:Battle Royale’/Epic Games
+			The audio in “Fortnite” is excellent. You can hear if someone is near you, above you, or below you. So use that audio to your advantage. Lie in wait for an unsuspecting player coming into a house to shotgun them quickly. If you hear gunshots off in the distance, go take a look – you might be able to snipe someone who is dealing with another enemy player.
+
+			5. When you die, don’t re-queue right away. Think about what you did wrong, and try to learn from it.
+
+			‘Fortnite’/Epic Games
+			Dying is common in “Fortnite,” but every death should be a learning experience. Use the Replay feature to see how you died from your killer’s perspective. Study your own movements, your loadout, and plan ahead for the future accordingly.
+
+		</p>
+	</main>
+		<center><img src="https://media1.tenor.com/images/2b8b435b9c59878ebdecbc4abcce22fe/tenor.gif?itemid=11842345"></center>
+		<center><img src="https://thumbs.gfycat.com/BetterNaughtyDoe-max-1mb.gif"></center>
 	</body>
+	
+	
+	
 
 
 
